# ChangeLog for dev-util/qgit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qgit-9999 (18 Mar 2009)

  18 Mar 2009; Maciej Mrozowski (reavertm) <reavertm@poczta.fm>
  +metadata.xml, +qgit-9999.ebuild:
  Ebuild added
