@@ -1,3 +1,3 @@
-EBUILD qgit-9999.ebuild 699 RMD160 2ac4fc6be697e05a10184b44348334392e3261d2 SHA1 db052fca11bf1dca5164568fc84c7a1a805a19d7 SHA256 b2f225042675ef15026b24e9a4f5f6b3d300cf9bc1d3c9d8b2d2a79e396c5051
-MISC ChangeLog 256 RMD160 b181984401a7d818555e1f8a6e6cfe9a3bdc8168 SHA1 8335d2edc11105f960273ecfbddcc43fc955dc57 SHA256 00e019ecb7b1ad5c2ff94513f3ce636483b5c949f43d0f0e2d7594b21e8a0894
+EBUILD qgit-9999.ebuild 482 RMD160 a6492ffe38d99560ad1618947786357fa9d5b7de SHA1 86271986a0eb72d777b8703459ebe9ca5602f954 SHA256 e99c6e80fefee0e94af978cb043a0be6a941a43baf5e22938aadd9868bfd23d3
+MISC ChangeLog 414 RMD160 219546750e446661ef4bd19c6fa3b0abfe27957d SHA1 10ee444a8f944f9210b9d34e5191bc3a9953309c SHA256 3c749aa1ba31d7fceca314bc97b54abc2fe3573e02f3d826d33770699d76804d
 MISC metadata.xml 258 RMD160 c1ad3ff5ec497e4fe33e672ea9376c4e35993af5 SHA1 f21434e7fb3664faefaf77e2217aeee2adb31767 SHA256 159efc6feac6bc40ec54b47157f3fcae9c654047a6fb040628c30797e71db865
