@@ -4,36 +4,22 @@
 
 EAPI="2"
 
-inherit qt4 git
-
-CPPUNIT_REQUIRED="optional"
+inherit qt4-edge git
 
 DESCRIPTION="GUI interface for git/cogito SCM"
 HOMEPAGE="http://digilander.libero.it/mcostalba/"
 EGIT_REPO_URI="git://git.kernel.org/pub/scm/qgit/qgit4.git"
 
 LICENSE="GPL-2"
-KEYWORDS=""
 SLOT="2"
+KEYWORDS=""
 IUSE=""
 
-DEPEND="
-	>=x11-libs/qt-gui-4.4:4
-"
+DEPEND="x11-libs/qt-gui:4"
 RDEPEND="${DEPEND}
-	>=dev-util/git-1.5.3
-"
-
-src_compile() {
-	eqmake4 || die "eqmake failed"
-	emake || die "emake failed"
-}
+	>=dev-util/git-1.5.3"
 
 src_install() {
 	newbin bin/qgit qgit4
 	dodoc README
-}
-
-pkg_postinst() {
-	elog "This is installed as qgit4 now so you can still use 1.5 series (Qt3-based)"
 }
