@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Jul 2009; Davide Pesavento <davidepesa@gmail.com> qgit-9999.ebuild:
+  Sync with portage ebuild and switch to qt4-edge eclass. Remove redundant
+  stuff.
+
 *qgit-9999 (18 Mar 2009)
 
   18 Mar 2009; Maciej Mrozowski (reavertm) <reavertm@poczta.fm>
